--- a/Front-End/CatalogueWebApp/src/app/app.component.html
+++ b/Front-End/CatalogueWebApp/src/app/app.component.html
@@ -1,29 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a  class="navbar-brand" href="#">Catalogue</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li ngbDropdown  class="nav-item dropdown" >
-        <a ngbDropdownToggle class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-         Admin
-        </a>
-        <div ngbDropdownMenu  class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Gestion des Catégories</a>
-          <a class="dropdown-item" href="#">Gestion des produits</a>
-          <a class="dropdown-item" href="#">Gestion des utilisateurs</a>
-
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
-<div class="row">
+<app-navbar></app-navbar>
+<div class="row" style="padding-top: 100px">
   <div class="col-md-2">
     <app-categories></app-categories>
   </div>
@@ -31,3 +7,5 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+ 
+
