--- a/Front-End/CatalogueWebApp/src/app/app.component.html
+++ b/Front-End/CatalogueWebApp/src/app/app.component.html
@@ -4,8 +4,9 @@
     <app-categories></app-categories>
   </div>
   <div class="col-md-9">
-    <router-outlet></router-outlet>
+    
   </div>
 </div>
  
-
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
