--- a/Front-End/CatalogueWebApp/src/app/login/login.component.html
+++ b/Front-End/CatalogueWebApp/src/app/login/login.component.html
@@ -1,3 +1,32 @@
-<p>
-  login works!
-</p>
+<div class="col-md-6">
+<form #f="ngForm" (ngSubmit)="onLogin(f.value)" class="text-center border border-light p-5">
+    <p class="h4 mb-4">Sign in</p>
+    <input type="username" name="username" ngModel id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Username">
+    <input type="password" name="password" ngModel id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+    <div class="d-flex justify-content-around">
+      <div>
+        <mdb-checkbox [default]="true">Remember me</mdb-checkbox>
+      </div>
+      <div>
+        <a href="">Forgot password?</a>
+      </div>
+    </div>
+    <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign in</button>
+    <p>Not a member?
+      <a href="">Register</a>
+    </p>
+    <p>or sign in with:</p>
+    <a type="button" class="light-blue-text mx-2">
+       <mdb-icon fab icon="facebook"></mdb-icon>
+    </a>
+    <a type="button" class="light-blue-text mx-2">
+      <mdb-icon fab icon="twitter"></mdb-icon>
+    </a>
+    <a type="button" class="light-blue-text mx-2">
+      <mdb-icon fab icon="linkedin"></mdb-icon>
+    </a>
+    <a type="button" class="light-blue-text mx-2">
+      <mdb-icon fab icon="heart"></mdb-icon>
+    </a>
+  </form>
+</div>
