--- a/Front-End/CatalogueWebApp/src/app/util/footer.html
+++ b/Front-End/CatalogueWebApp/src/app/util/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="float-right footer-text">
-      <span class="text-muted">Sticky Footer</span>
+      <span class="text-muted">Ismail Salmi</span>
     </div>
   </footer>
