--- a/ihm/src/app/login/login.component.html
+++ b/ihm/src/app/login/login.component.html
@@ -1,9 +1,10 @@
 ﻿<div class="main">
-<div class="container">
+  <div class="container">
 	<div class="d-flex justify-content-center h-100 topClass" >
-		<div class="card">
+		<div class="card" *ngIf="!isRegister">
 			<div class="card-header">
 				<h3>Sign In</h3>
+				<alert></alert>
 				<div class="d-flex justify-content-end social_icon">
 					<span><i class="fab fa-facebook-square"></i></span>
 					<span><i class="fab fa-google-plus-square"></i></span>
@@ -36,18 +37,33 @@
 					</div>
                     <div class="form-group">
                     <button [disabled]="loading" class="btn float-right login_btn">Login</button>
-                  </div>
+          </div>
 				</form>
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Don't have an account?<a routerLink="/register">Sign up</a>
+					Don't have an account?<a (click)="register()" class="register">Sign up</a>
 				</div>
 				<div class="d-flex justify-content-center">
 					<a href="#">Forgot your password?</a>
 				</div>
 			</div>
 		</div>
+		<div class="card" *ngIf="isRegister">
+			<div class="card-header">
+				<h3>Sign Up</h3>
+				<span class="social_icon_goback"><i (click)="goBack()" class="fas fa-long-arrow-alt-left"></i></span>
+				<alert></alert>
+				<div class="d-flex justify-content-end social_icon">
+						<span><i class="fab fa-facebook-square"></i></span>
+						<span><i class="fab fa-google-plus-square"></i></span>
+						<span><i class="fab fa-twitter-square"></i></span>
+				</div>
+			</div>
+			<div class="card-body">
+				<app-register></app-register>
+			</div>
+		</div>
 	</div>
-</div>
+  </div>
 </div>
