--- a/ihm/src/app/register/register.component.html
+++ b/ihm/src/app/register/register.component.html
@@ -31,9 +31,9 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fas fa-key"></i></span>
                 </div>
-                <input type="text" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Confirm password" />
-                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password don't match</div>
+                <input type="text" formControlName="confirmedPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmedPassword.errors }" placeholder="Confirm password" />
+                <div *ngIf="submitted && f.confirmedPassword.errors" class="invalid-feedback">
+                    <div *ngIf="f.confirmedPassword.errors.required">Password don't match</div>
                </div> 
         </div>
     <div class="form-group">
